[project]
name = "llvis"
version = "0.1.0"
description = ""
authors = [
    {name = "hazo8pill",email = "skrypak.cookiedev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama (>=0.5.1,<0.6.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "llvis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
